# pair-claudeing

./: .gitignore  CLAUDE.md  README.md
paircoded/: Cargo.toml
paircoded/src/: auth.rs  bridge.rs  config.rs  control.rs  main.rs  protocol.rs  pty.rs  relay.rs  sandbox.rs  terminal_manager.rs  test_server.rs
relay-service/: .env.example  package.json  pnpm-lock.yaml
relay-service/public/: home.html  index.html  jam.html  jam.js  login.html  terminal.js
relay-service/src/: config.ts  index.ts
relay-service/src/db/: index.ts
relay-service/src/protocol/: index.ts  messages.ts
relay-service/src/server/: auth-routes.ts  http-routes.ts  index.ts  jam-routes.ts  jwt.ts  peer-routes.ts
relay-service/src/session/: index.ts  session.ts  types.ts
relay-service/src/utils/: errors.ts  friendly-id.ts  logger.ts
relay-service/src/websocket/: browser-handler.ts  control-handler.ts  jam-handler.ts  message-router.ts  paircoded-handler.ts  terminal-data-handler.ts
