[package]
name = "paircoded"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that hosts a terminal over the internet by connecting to a relay service"
license = "MIT"
default-run = "paircoded"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# PTY management
portable-pty = "0.8"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# URL parsing
url = "2"

# Random number generation
rand = "0.8"

# Config directory
dirs = "5"

# HTTP client for GitHub Device Flow
reqwest = { version = "0.12", features = ["json"] }

# System info
whoami = "1"
hostname = "0.4"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Terminal emulation for snapshots
vt100 = "0.15"

# Base64 encoding for snapshot data
base64 = "0.22"

[[bin]]
name = "paircoded"
path = "src/main.rs"

[[bin]]
name = "test-server"
path = "src/test_server.rs"
